# projeto

./: .gitignore  .gitignore~  README.md  README.md~
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: sonar_reading.pc
devel/lib/sonar_reading/: sonar_reading
octomap-example/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  simple  simple_tree.bt
octomap/lib/: libdynamicedt3d.so.1.6  libdynamicedt3d.so.1.6.8  liboctomap.so.1.6.8  liboctomath.so.1.6.8  liboctovis.so.1.6  liboctovis.so.1.6.8
octomap/octomap/src/: CMakeCache.txt  CMakeLists.txt
src/projeto/: CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  commando_por_distancia.csv  comp.txt  mainpage.dox  manifest.xml  mybag.csv  mybag_dim_tau_0_5.csv  mybag_dim_tau_1.csv  mybag_dim_tau_1_5.csv  mybag_dim_tau_2.csv  mybag_direto_tau_0_5.csv  mybag_direto_tau_1.csv  mybag_direto_tau_2.csv  mybag_espiral.csv  mybag_labirinto.csv  mybag_labirinto2.csv  mybag_oito 4.csv  mybag_oito.csv  mybag_quadrado.csv  mybag_quadrado4.csv  mybag_quadrado4_0.csv  mybag_quadrado4_1_1.csv  mybag_quadrado4_2.csv  mybag_quadrado4_3.csv  pitch.csv  roll.csv  simple_tree.bt  velocidade.txt  x_kp_0.10_kd_0.00_ki_0.10.csv  x_kp_0.10_kd_0.10_ki_0.00.csv  x_kp_0.10_kd_0.10_ki_0.10.csv  x_kp_0.50_kd_0.00_ki_0.00.csv  x_kp_0.50_kd_0.00_ki_0.50.csv  x_kp_0.50_kd_0.50_ki_0.00.csv  x_kp_0.50_kd_0.50_ki_0.50.csv  (+46 more)
src/sonar_reading/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  manifest.xml  package.xml
(+94 files in other folders)
